Bug 237268 - doesn't search multiple filters/directories and does not replace anything
Summary: doesn't search multiple filters/directories and does not replace anything
Status: RESOLVED FIXED
Alias: None
Product: kfilereplace
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-11 17:54 UTC by Christoph Drexler
Modified: 2010-10-11 18:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Drexler 2010-05-11 17:54:34 UTC
Version:           0.1 (using KDE 4.4.3)
Compiler:          gcc 4.5.0 (presumeably) 
OS:                Linux
Installed from:    Archlinux Packages

kfilereplace only works
* for the first argument in the filter (so if the filter is set to "*.html,*.pdf" it only searches in *.html-files" AND
* only for searching.

Trying to "Replace" anything does not work at all, neither does "Simulate".

Archlinux package maintainer suggests that this might be an upstream bug, see http://bugs.archlinux.org/task/19367
Comment 1 Ronald van Haren 2010-05-11 18:39:38 UTC
I also said it on our bugtracker, basic replace/simulate does work for me, didn't do any extensive testing here if there are use cases in which it doesn't work, obviously according to the OP there are.
Comment 2 Christoph Drexler 2010-05-11 19:01:51 UTC
Retrying to "Simulate" and "Replace", I have found out that replacing 'a' by 'b' works, but replacing 'a' by 'aaaa' does not work.

Should I open a different bug report for this replacement issue?
Comment 3 Clauber Santos 2010-05-14 13:21:53 UTC
KFileReplace search only for 1 argument in filter. If have more than one, doesn't work.

Version: 0.1 KDE 4.4.3
Linux: Slackware 2.6.33.3-smp
Installed from: Slackware repository (current)
Comment 4 Christoph Feck 2010-10-11 18:39:48 UTC
SVN commit 1184865 by cfeck:

Fix filter only working for one glob pattern

Regression caused by r1027888

BUG: 237268


 M  +4 -4      kfilereplacepart.cpp  
 M  +1 -1      knewprojectdlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1184865