Fix filter only working for one glob pattern

Regression caused by r1027888

BUG: 237268

svn path=/trunk/KDE/kdewebdev/kfilereplace/; revision=1184865